--------------------
EWDskale 0.3.1 (??.??.2017)

- Poprawione błędy:
  - lacz_kryteria_z_korelacji_w_ramach_czesci_egz() importuje metodę coef()
    z pakietu mirt (w którym się pojawiła), a nie z pakietu stats;
  - wczytaj_wyniki_surowe() rzuca ostrzeżeniem, jeśli nie uda jej się przyłączyć
    danych kontekstowych.

--------------------
EWDskale 0.3 (16.11.2016)

- Poprawione błędy:
  - zmien_parametry_na_do_bazy() znów radzi sobie z modelami jednogrupowymi;
  - skaluj_egz_gimn(), skaluj_egz_gimn_rasch() - głupi błąd z nazwą kolumny;
  - skaluj_egz_gimn_rasch() niepotrzebnie po raz drugi dzieliło wartości
    zrównane (w mapowaniu suma-wartość zrównana) przez pierwiastek z rzetelności
    empirycznej;
  - skaluj_matura() generuje oddzielne zmienne opisujące wybór przedmiotów dla
    zdających w "starej" i "nowej" formule w 2015 r.; dobrze obsługuje też
    tematy wypracowań w 2015 r.

- Nowe funkcjonalności:
  - skaluj_spr() radzi sobie z danymi, w których brak danych o laureatach
    (tj. danymi z CKE - są wykorzystywane do skalowania spr. 2013);
  - sprawdz_wyniki_skalowania() nie uwzględnia na wykresie (pseudo)kryteriów
    o ekstremalnych wartościach trudności (dotyczy to głównie trudności
    "zadań" opisuących wybieralność tematóW z języka polskiego), lecz wyświetla
    je oddzielnie w tabelce;
  - sprawdz_wyniki_skalowania(), o ile jest w stanie znaleźć i wczytać plik
    z danymi kontekstowymi, oblicza i wyświetla średnie i odch. std. wyników
    wśród uczniów LO i T (w grupie "wzorcowej").

--------------------
EWDskale 0.2 (19.12.2015)

Funkcje przeniesione z pakietu EWDskalowanie (i, co do zasady, gruntownie
przepisane):
- przewidywanie_rasch();
- skaluj_sprawdzian();
- skaluj_egz_gimn();
- skaluj_egz_gimn_rasch();
- skaluj_matura();
- skaluj_matura_rasch();
- skroc_skale_oceny(), okresl_wzor_skracania();
- sprawdz_wyniki_skalowania().

Nowe funkcje:
- wczytaj_wyniki_surowe() - z dysku;
- wczytaj_wyniki_wyskalowane() - z dysku;