@@ -5,7 +5,9 @@ EWDskale 0.3.1 (??.??.2017)
   - lacz_kryteria_z_korelacji_w_ramach_czesci_egz() importuje metodę coef()
     z pakietu mirt (w którym się pojawiła), a nie z pakietu stats;
   - wczytaj_wyniki_surowe() rzuca ostrzeżeniem, jeśli nie uda jej się przyłączyć
-    danych kontekstowych.
+    danych kontekstowych;
+  - pobierz_kryteria_do_laczenia() radzi sobie w sytuacji, gdy ze skalą
+    powiązane są zarówno testy "egzaminacyjne" jak i "nieegzaminacyjne".
 
 --------------------
 EWDskale 0.3 (16.11.2016)
